# aws-whoami

./: .gitignore  .mise.toml  README.md  Taskfile.yaml
aws-cli/: whoami.sh
go-aws-whoami/: go.mod  whoami.go
node-aws-whoami-v2/: package-lock.json  package.json  whoami.js
node-aws-whoami-v3/: package-lock.json  package.json  whoami.mjs
py3-aws-whoami/: requirements.txt  run.sh  whoami.py
rust-aws-whoami/: Cargo.toml  run.sh
rust-aws-whoami/src/: main.rs
