[package]
name = "rust-aws-whoami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.39.0" }
tokio = { version = "1.39.3", features = ["full"] }
